# sql-agent-oss

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  audit_project.py  debug_requests.py  docker-compose.yml  docs.Dockerfile  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  radiografia_actualizada.md  reporte_arquitectura.txt  tsconfig.json  turbo.json
.gemini/: settings.json
apps/agent-host/: Dockerfile  docker-entrypoint.sh  package.json  pyproject.toml
apps/agent-host/src/: main.py  ui.py
apps/agent-host/src/agent_core/: graph.py  main.py
apps/agent-host/src/agent_core/api/: loader.py
apps/agent-host/src/agent_core/config/: loader.py
apps/agent-host/src/agent_core/core/: nodes.py  state.py
apps/agent-host/src/agent_core/llm/: factory.py
apps/agent-host/src/api/: server.py  webhook.py
apps/agent-host/src/channels/telegram/: entry.py
apps/agent-host/src/channels/whatsapp/: router.py
apps/agent-host/src/core/application/: container.py  tool_manager.py
apps/agent-host/src/core/application/workflows/: graph.py
apps/agent-host/src/core/domain/: state.py
apps/agent-host/src/core/ports/: tool_provider.py
apps/agent-host/src/features/sql_analysis/: loader.py
apps/agent-host/src/features/sql_analysis/tools/: sql_guard.py
apps/agent-host/src/infra/config/: loader.py
apps/agent-host/src/infra/legacy/: api_loader.py
apps/agent-host/src/infra/mcp/: loader.py  manager.py  multi_server_client.py  tool_provider.py
apps/agent-host/src/infra/memory/: postgres_checkpointer.py
apps/agent-host/src/sql_agent/: graph.py
apps/agent-host/src/sql_agent/api/: loader.py
apps/agent-host/src/sql_agent/config/: loader.py
apps/agent-host/src/sql_agent/core/: nodes.py  state.py
apps/agent-host/src/sql_agent/database/: connection.py  inspector.py
apps/agent-host/src/sql_agent/semantic/: hydrator.py
apps/agent-host/src/sql_agent/utils/: mcp_client.py
config/: business_context.yaml  prompts.yaml  settings.yaml
data/: dictionary.yaml
docs/: 05_whatsapp_integration.md  06_mcp_migration_spec.md  index.md  swagger.json
docs/01_architecture/: overview.md  project_boundaries.md  tech_stack_decisions.md
docs/02_setup_infra/: infrastructure_spec.md
docs/03_semantic_layer/: semantic_spec.md
docs/04_optimization/: how_to_extend.md  modernization_roadmap.md
docs/adr/: 0001-tech-stack.md  0002-modernization-roadmap-v3.md
docs/concepts/: architecture.md  boundaries.md  semantic_layer.md
docs/guides/setup/: telegram-integration.md  warp_terminal.md  whatsapp-integration.md
docs/legacy_reports/: 06_mcp_migration_spec_v3.md  radiografia-actualizada.md
docs/reference/: agent-core.md  agent_core.md  features.md  infra.md
docs/reference/config/: infrastructure.md
logs/: last_schema_debug.json
scripts/: generate_dictionary.py  list_models.py  run_agent.py  test_connection.py  test_schema.py  validator.py  verify_mcp.py
services/mcp-api-sidecar/: Dockerfile  pyproject.toml
services/mcp-api-sidecar/src/: main.py
services/mcp-mysql-sidecar/: .swcrc  Dockerfile  package.json  pnpm-lock.yaml
services/mcp-mysql-sidecar/apps/agent-host/: Dockerfile  pyproject.toml
services/mcp-mysql-sidecar/src/: index.ts
src/api/: webhook.py
src/sql_agent/: graph.py
src/sql_agent/api/: loader.py
src/sql_agent/config/: loader.py
src/sql_agent/core/: nodes.py  state.py
src/sql_agent/database/: inspector.py
src/sql_agent/llm/: factory.py
src/sql_agent/semantic/: hydrator.py
