[tool.poetry]
name = "mcp-api-sidecar"
version = "0.1.0"
description = "MCP Sidecar para interactuar con APIs externas mediante Swagger/OpenAPI"
authors = ["David R. <dev.drbh@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mcp = "^1.2.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
langchain-community = "^0.3.0"
langchain = "^0.3.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
